doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Volumes/virodbri/iip/pract6/graphLib.jar:/Users/vicen/Desktop/Things/Asignaturas/PRG/p1/pract 1/graphLib.jar:/Users/vicen/Desktop/Things/Asignaturas/PRG/prg/graphLib.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/vicen/LTP
-d
/Users/vicen/LTP/doc
-encoding
UTF-8
-charset
UTF-8
/Users/vicen/LTP/Pract3Lineales/librerias/aplicaciones/QueueApp.java
<---- end of javadoc command ---->
Loading source file /Users/vicen/LTP/Pract3Lineales/librerias/aplicaciones/QueueApp.java...
Constructing Javadoc information...
/Users/vicen/LTP/Pract3Lineales/librerias/aplicaciones/QueueApp.java:4: error: package librerias.modelos.implementaciones does not exist
import librerias.modelos.implementaciones.QueueAC;
                                         ^
Standard Doclet version 1.8.0_131
Building tree for all the packages and classes...
Generating /Users/vicen/LTP/doc/Pract3Lineales/librerias/aplicaciones/QueueApp.html...
Generating /Users/vicen/LTP/doc/Pract3Lineales/librerias/aplicaciones/package-frame.html...
Generating /Users/vicen/LTP/doc/Pract3Lineales/librerias/aplicaciones/package-summary.html...
Generating /Users/vicen/LTP/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/vicen/LTP/doc/allclasses-frame.html...
Generating /Users/vicen/LTP/doc/allclasses-noframe.html...
Generating /Users/vicen/LTP/doc/index.html...
1 warning
